Added new route to order-service
